Changed to v1.0.0 material

--- a/lessons/Lesson1_BOLDvessel.ipynb
+++ b/lessons/Lesson1_BOLDvessel.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from BOLDswimsuite import BOLDvessel\n",
+    "from boldswimsuite import BOLDvessel\n",
     "import numpy as np"
    ]
   },
@@ -31,7 +31,6 @@
     "\n",
     "2D:\n",
     "- Infinite Cylinder: `BOLDvessel.InfiniteCylinder2D`\n",
-    "- In-plane sphere: `BOLDvessel.Sphere2D`\n",
     "\n",
     "All of these objects are created and function similarily, so we will use `BOLDvessel.InfiniteCylinder3D` to explain how to create and use these objects.\n",
     "\n",
@@ -298,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
