--- a/lessons/Lesson2_BOLDgeometry.ipynb
+++ b/lessons/Lesson2_BOLDgeometry.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from BOLDswimsuite import BOLDgeometry, BOLDvessel\n",
+    "from boldswimsuite import BOLDgeometry, BOLDvessel\n",
     "import numpy as np"
    ]
   },
@@ -412,7 +412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating a Discrete Voxel from Arbitrary Perturber Geometry\n",
+    "### Creating a Discrete Voxel from User-Defined Perturber Geometry\n",
     "\n",
     "The FFT method can also work with user-defined perturber geometries, as long as a `vessel_index_grid` is provided, along with some additional parameters. For this example we will manually make two spheres positioned in the voxel."
    ]
