--- a/lessons/Lesson3_BOLDspins.ipynb
+++ b/lessons/Lesson3_BOLDspins.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from BOLDswimsuite import BOLDgeometry, BOLDspins"
+    "from boldswimsuite import BOLDgeometry, BOLDspins"
    ]
   },
   {
