--- a/lessons/Lesson4_BOLDsequence.ipynb
+++ b/lessons/Lesson4_BOLDsequence.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from BOLDswimsuite import BOLDgeometry, BOLDspins, BOLDsequence\n",
+    "from boldswimsuite import BOLDgeometry, BOLDspins, BOLDsequence\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm # for progress bars"
