--- a/lessons/Lesson5_BOLDdeterministic.ipynb
+++ b/lessons/Lesson5_BOLDdeterministic.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from BOLDswimsuite import BOLDgeometry, BOLDdeterministic\n",
+    "from boldswimsuite import BOLDgeometry, BOLDdeterministic\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
